--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,15 +8,16 @@
   <link rel="shortcut icon" href="imagens/images (2).jpg" type="image/x-icon">
   <link rel="stylesheet" href="css/estilo.css">
 </head>
+
 <body>
 
   <header>
     <nav>
       <h1>Davi e Marcos - Eletricista</h1>
       <div class="eletricista-animado">
-        <img src="imagens/5739e1f0b1cab863f9d40d902def8f03.jpg" alt="Eletricista em ação" width="100" height="100">
+        <img src="imagens/wonderful-creative-electrician-holding-wires-original-free-png.webp" alt="Eletricista em ação" width="180" height="180">
       </div>
-    
+
       <ul class="menu">
         <li><a href="#servicos">Serviços</a></li>
         <li><a href="#sobre">Sobre</a></li>
@@ -30,9 +31,9 @@
   </header>
 
   <main>
-    <section id="servicos" class="grid-servicos">
+    <section  class="grid-servicos">
       <article>
-        <img src="imagens/images.jpg" alt="Instalação elétrica">
+        <img src="imagens/instalacoes-eletricas.jpg" alt="Instalação elétrica">
         <h3>Instalações</h3>
         <p>Residencial e comercial, com total segurança.</p>
       </article>
@@ -50,13 +51,19 @@
 
     <section id="sobre" class="sobre">
       <div class="sobre-texto">
-        <h2>Sobre Mim</h2>
-        <p>Sou eletricista certificado com mais de 10 anos de experiência em serviços residenciais e comerciais. Trabalho com agilidade, segurança e foco total na satisfação do cliente.</p>
+        <h2>Duvidas?</h2>
+        <p>Aqui ao lado deixamos um video explicando dicas para você que quer ser um eletricisat certificado 
+           em serviços de residenciais ou comerciais,
+          com agilidade, segurança e foco total na satisfação do seu cliente.</p>
       </div>
       <div class="video">
-        <video controls>
-          <source src="https://youtu.be/wvTfrmoLfqo" type="video/mp4">
-        </video>
+
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/VuMMT18RelU?si=ob6YS0yBDnm4H6X7&amp;start=1"
+          title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+
       </div>
     </section>
   </main>
@@ -70,5 +77,5 @@
   </footer>
 
 </body>
-</html>
 
+</html>
