--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,16 +7,13 @@
   <link rel="shortcut icon" href="imagens/images (2).jpg" type="image/x-icon">
   <link rel="stylesheet" href="css/estilo.css">
 </head>
-
 <body>
-
   <header>
     <nav>
-      <h1>Davi e Marcos - Eletricista</h1>
+      <h1>Davi e Marcos - Eletricistas</h1>
       <div class="eletricista-animado">
         <img src="imagens/wonderful-creative-electrician-holding-wires-original-free-png.webp" alt="Eletricista em ação" width="180" height="180">
       </div>
-
       <ul class="menu">
         <li><a href="#servicos">Serviços</a></li>
         <li><a href="#sobre">Sobre</a></li>
@@ -31,7 +27,7 @@
   </header>
 
   <main>
-    <section  class="grid-servicos">
+    <section id="servicos" class="grid-servicos">
       <article>
         <img src="imagens/instalacoes-eletricas.jpg" alt="Instalação elétrica">
         <h3>Instalações</h3>
@@ -51,31 +47,19 @@
 
     <section id="sobre" class="sobre">
       <div class="sobre-texto">
-        <h2>Duvidas?</h2>
-        <p>Aqui ao lado deixamos um video explicando dicas para você que quer ser um eletricisat certificado 
-           em serviços de residenciais ou comerciais,
-          com agilidade, segurança e foco total na satisfação do seu cliente.</p>
+        <h2>Dúvidas?</h2>
+        <p>Assista ao vídeo ao lado com dicas para se tornar um eletricista certificado e oferecer serviços seguros e de qualidade.</p>
       </div>
       <div class="video">
-
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/VuMMT18RelU?si=ob6YS0yBDnm4H6X7&amp;start=1"
-          title="YouTube video player" frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
-
+        <iframe src="https://www.youtube.com/embed/VuMMT18RelU?start=1" frameborder="0" allowfullscreen></iframe>
       </div>
     </section>
   </main>
-
-
 
   <footer id="contato">
     <h2>Entre em Contato</h2>
     <p>Email: juntos@eletricista.com | Telefone: (11) 99999-0000</p>
     <p>&copy; 2025 Davi e Marcos - Todos os direitos reservados.</p>
   </footer>
-
 </body>
-
 </html>
